--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="scss/main.css">
 </head>
+
 <body>
-    <header></header>
+    <header>
+        <div class="logo">
+            <img src="images/logo/ohmyfood.png" alt="logo">
+        </div>
+    </header>
+    <main>
+        <section id="reservation">
+            <div class="reservation">
+                <div class="reservation__example">
+                    <i class="fas fa-map-marker-alt local__icon"></i>
+                    <p> Paris, Belleville</p>
+                </div>
+                <div class="reservation__description">
+                    <h2>Réserver le menu qui vous convient</h2>
+                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    <button class="btn"><a href="#">Explorer nos restaurants</a></button>
+                </div>
+            </div>
+        </section>
+        <!-- <section class="">
+        </section>
+        <section>
+            <div class="restaurants">
+                <div class="title">
+                    <h2>Restaurants</h2>
+                </div>
+                <div class="restaurants__cards">
+                    <a href="">
+
+                    </a>
+                </div>
+            </div>
+        </section> -->
+    </main>
+    <!-- <footer>
+        <h2>ohmyfood</h2>
+        <ul>
+            <li>
+                <a href="">
+                    <i></i>
+                    <p>Proposer un restaurant</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <i></i>
+                    <p>Proposer un restaurant</p>
+                </a>
+            </li>
+        </ul>
+        <div>
+            <a href="">Mention légale</a>
+        </div>
+        <div>
+            <a href="">Contatc</a>
+        </div>
+    </footer> -->
 </body>
+
 </html>
