add steps section

--- a/index.html
+++ b/index.html
@@ -34,9 +34,32 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="">
+        <section id="steps">
+            <div class="steps">
+                <h2>Fonctionement</h2>
+                <ol>
+                    <li class="steps__item">
+                        <i class="fas fa-mobile-alt"></i>
+                        <span>
+                            Choisissez un restaurant
+                        </span>
+                    </li>
+                    <li class="steps__item">
+                        <i class="fas fa-list-ul"></i>
+                        <span>
+                            Composez votre menu
+                        </span>
+                    </li>
+                    <li class="steps__item">
+                        <i class="fas fa-store"></i>
+                        <span>
+                            dégustez au restaurant
+                        </span>
+                    </li>
+                </ol>
+            </div>
         </section>
-        <section>
+        <!--<section>
             <div class="restaurants">
                 <div class="title">
                     <h2>Restaurants</h2>
