add section restaurant

--- a/index.html
+++ b/index.html
@@ -53,48 +53,113 @@
                     <li class="steps__item">
                         <i class="fas fa-store"></i>
                         <span>
-                            dégustez au restaurant
+                            Dégustez au restaurant
                         </span>
                     </li>
                 </ol>
             </div>
         </section>
-        <!--<section>
+        <section>
             <div class="restaurants">
-                <div class="title">
-                    <h2>Restaurants</h2>
-                </div>
-                <div class="restaurants__cards">
-                    <a href="">
-
+                <h2>Restaurants</h2>
+                <div class="cards">
+                    <a class="card" href="">
+                        <div class="card__img">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <span class="card__new">Nouveau</span>
+                        </div>
+                        <div class="card__container">
+                            <div class="card__descrpition">
+                                <h3>Le palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <span class="card__favorite">
+                                <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
+                                <i class="far fa-heart fa-stack-2x heart-unfill"></i>
+                            </span>
+                        </div>
+                    </a>
+                    <a class="card" href="">
+                        <div class="card__img">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <span class="card__new">Nouveau</span>
+                        </div>
+                        <div class="card__container">
+                            <div class="card__descrpition">
+                                <h3>Le palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <span class="card__favorite">
+                                <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
+                                <i class="far fa-heart fa-stack-2x heart-unfill"></i>
+                            </span>
+                        </div>
+                    </a>
+                    <a class="card" href="">
+                        <div class="card__img">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <span class="card__new">Nouveau</span>
+                        </div>
+                        <div class="card__container">
+                            <div class="card__descrpition">
+                                <h3>Le palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <span class="card__favorite">
+                                <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
+                                <i class="far fa-heart fa-stack-2x heart-unfill"></i>
+                            </span>
+                        </div>
+                    </a>
+                    <a class="card" href="">
+                        <div class="card__img">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <span class="card__new">Nouveau</span>
+                        </div>
+                        <div class="card__container">
+                            <div class="card__descrpition">
+                                <h3>Le palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <span class="card__favorite">
+                                <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
+                                <i class="far fa-heart fa-stack-2x heart-unfill"></i>
+                            </span>
+                        </div>
                     </a>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
-    <!-- <footer>
-        <h2>ohmyfood</h2>
-        <ul>
-            <li>
-                <a href="">
-                    <i></i>
-                    <p>Proposer un restaurant</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <i></i>
-                    <p>Proposer un restaurant</p>
-                </a>
-            </li>
-        </ul>
-        <div>
-            <a href="">Mention légale</a>
+    <footer>
+        <div class="footer__container">
+            <h2 class="footer__title">ohmyfood</h2>
+            <ul class="footer__nav">
+                <li>
+                    <a href="#">
+                        <i class="fas fa-utensils"></i>
+                        <p>Proposer un restaurant</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fas fa-hands-helping"></i>
+                        <p>Proposer un restaurant</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <a href="">Mention légale</a>
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:contact@ohmyfood.com">
+                        <a href="">Contact</a>
+                    </a>
+                </li>
+            </ul>
         </div>
-        <div>
-            <a href="">Contatc</a>
-        </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
