--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                             </div>
                             <span class="card__favorite">
                                 <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
-                                <i class="far fa-heart fa-stack-2x heart-unfill"></i>
+                                <i class="far fa-heart heart-unfill"></i>
                             </span>
                         </div>
                     </a>
                     <a class="card" href="">
                         <div class="card__img">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                             <span class="card__new">Nouveau</span>
                         </div>
                         <div class="card__container">
@@ -91,13 +91,13 @@
                             </div>
                             <span class="card__favorite">
                                 <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
-                                <i class="far fa-heart fa-stack-2x heart-unfill"></i>
+                                <i class="far fa-heart heart-unfill"></i>
                             </span>
                         </div>
                     </a>
                     <a class="card" href="">
                         <div class="card__img">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                             <span class="card__new">Nouveau</span>
                         </div>
                         <div class="card__container">
@@ -107,13 +107,13 @@
                             </div>
                             <span class="card__favorite">
                                 <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
-                                <i class="far fa-heart fa-stack-2x heart-unfill"></i>
+                                <i class="far fa-heart heart-unfill"></i>
                             </span>
                         </div>
                     </a>
                     <a class="card" href="">
                         <div class="card__img">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                             <span class="card__new">Nouveau</span>
                         </div>
                         <div class="card__container">
@@ -123,7 +123,7 @@
                             </div>
                             <span class="card__favorite">
                                 <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
-                                <i class="far fa-heart fa-stack-2x heart-unfill"></i>
+                                <i class="far fa-heart heart-unfill"></i>
                             </span>
                         </div>
                     </a>
@@ -131,30 +131,31 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="footer__container">
+    <footer class="footer">
+        <div class="container">
             <h2 class="footer__title">ohmyfood</h2>
             <ul class="footer__nav">
                 <li>
                     <a href="#">
                         <i class="fas fa-utensils"></i>
-                        <p>Proposer un restaurant</p>
+                        Proposer un restaurant
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <i class="fas fa-hands-helping"></i>
-                        <p>Proposer un restaurant</p>
+                        Proposer un restaurant
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <a href="">Mention légale</a>
+                        <p href="">Mention légple
+                    </a>
                     </a>
                 </li>
                 <li>
                     <a href="mailto:contact@ohmyfood.com">
-                        <a href="">Contact</a>
+                        <p href="">Contact</p>
                     </a>
                 </li>
             </ul>
