add menu html+css

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         </div>
                         <div class="card__container">
                             <div class="card__descrpition">
-                                <h3>Le palette du goût</h3>
-                                <p>Ménilmontant</p>
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
                             </div>
                             <span class="card__favorite">
                                 <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
@@ -102,8 +102,8 @@
                         </div>
                         <div class="card__container">
                             <div class="card__descrpition">
-                                <h3>Le palette du goût</h3>
-                                <p>Ménilmontant</p>
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
                             </div>
                             <span class="card__favorite">
                                 <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
@@ -118,8 +118,8 @@
                         </div>
                         <div class="card__container">
                             <div class="card__descrpition">
-                                <h3>Le palette du goût</h3>
-                                <p>Ménilmontant</p>
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
                             </div>
                             <span class="card__favorite">
                                 <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
@@ -149,7 +149,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <p href="">Mention légple
+                        <p href="">Mention légale
                     </a>
                     </a>
                 </li>
