--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
             <div class="restaurants">
                 <h2>Restaurants</h2>
                 <div class="cards">
-                    <a class="card" href="">
+                    <a class="card" href="la_palette_du_gout.html">
                         <div class="card__img">
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                             <span class="card__new">Nouveau</span>
                         </div>
                         <div class="card__container">
                             <div class="card__descrpition">
-                                <h3>Le palette du goût</h3>
+                                <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
                             <span class="card__favorite">
@@ -79,7 +79,7 @@
                             </span>
                         </div>
                     </a>
-                    <a class="card" href="">
+                    <a class="card" href="la_note_enchantee.html">
                         <div class="card__img">
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                             <span class="card__new">Nouveau</span>
@@ -95,7 +95,7 @@
                             </span>
                         </div>
                     </a>
-                    <a class="card" href="">
+                    <a class="card" href="a_la_française.html">
                         <div class="card__img">
                             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                             <span class="card__new">Nouveau</span>
@@ -111,7 +111,7 @@
                             </span>
                         </div>
                     </a>
-                    <a class="card" href="">
+                    <a class="card" href="le_delice_du_sens.html">
                         <div class="card__img">
                             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                             <span class="card__new">Nouveau</span>
