ajout animation apparition

--- a/a_la_française.html
+++ b/a_la_française.html
@@ -33,7 +33,7 @@
             <section class="menu__starters">
                 <h3 class="menu__title--categorie">ENTRÉES</h3>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-1">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Tartare de poulpe acidulé</h3>
@@ -47,7 +47,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-2">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Velouté de légumes d'antan</h3>
@@ -61,7 +61,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-3">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Soupe à l'oignon</h3>
@@ -80,7 +80,7 @@
             <section class="menu__dishes">
                 <h2 class="menu__title--categorie">PLATS</h2>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-4">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Coquilles Saint-Jacques</h3>
@@ -94,7 +94,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-5">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Magret de canard</h3>
@@ -108,7 +108,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-6">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Pigeonneau d’Ille-et-Vilaine</h3>
@@ -127,7 +127,7 @@
             <section class="menu__desserts">
                 <h2 class="menu__title--categorie">DESSERTS</h2>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-7">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Pétales de violettes glacés</h3>
@@ -141,7 +141,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-8">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Fondant au chocolat</h3>
@@ -155,7 +155,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-9">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Millefeuille croustillant</h3>
