--- a/le_delice_du_sens.html
+++ b/le_delice_du_sens.html
@@ -33,7 +33,7 @@
             <section class="menu__starters">
                 <h3 class="menu__title--categorie">ENTRÉES</h3>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-1">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Tartare de thon</h3>
@@ -47,7 +47,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-2">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Bouchée de homard croustillant </h3>
@@ -61,7 +61,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-3">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Velouté de cèpes </h3>
@@ -80,7 +80,7 @@
             <section class="menu__dishes">
                 <h2 class="menu__title--categorie">PLATS</h2>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-4">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Poulet rôti aux herbes de Provence </h3>
@@ -94,7 +94,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-5">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Langouste rôtie </h3>
@@ -108,7 +108,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-6">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Côte de boeuf Angus  </h3>
@@ -127,7 +127,7 @@
             <section class="menu__desserts">
                 <h2 class="menu__title--categorie">DESSERTS</h2>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-7">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Farandole de desserts</h3>
@@ -141,7 +141,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-8">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Crème brulée</h3>
@@ -155,7 +155,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-9">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Tiramisu </h3>
