--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -33,7 +33,7 @@
             <section class="menu__starters">
                 <h3 class="menu__title--categorie">ENTRÉES</h3>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-1">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Ravioles de foie gras </h3>
@@ -47,7 +47,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-2">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Caviar osciètre </h3>
@@ -61,7 +61,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-3">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Homard et espuma de potiron</h3>
@@ -75,7 +75,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-4">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Foie gras de canard cuit entier</h3>
@@ -94,7 +94,7 @@
             <section class="menu__dishes">
                 <h2 class="menu__title--categorie">PLATS</h2>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-5">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Noix de coquilles Saint-Jacques</h3>
@@ -108,7 +108,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-6">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Langoustine poêlée</h3>
@@ -122,7 +122,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-7">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Mijoté de queue de boeuf </h3>
@@ -141,7 +141,7 @@
             <section class="menu__desserts">
                 <h2 class="menu__title--categorie">DESSERTS</h2>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-8">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Macaron noisette et chocolat</h3>
@@ -155,7 +155,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-9">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Baba au rhum revisité </h3>
@@ -169,7 +169,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-10">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Tarte au citron meringuée </h3>
