--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -33,7 +33,7 @@
             <section class="menu__starters">
                 <h3 class="menu__title--categorie">ENTRÉES</h3>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-1">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Fricassée d'escargot</h3>
@@ -47,7 +47,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-2">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Foie gras de canard mi-cuit</h3>
@@ -61,7 +61,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-3">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Oeuf au plat</h3>
@@ -80,7 +80,7 @@
             <section class="menu__dishes">
                 <h2 class="menu__title--categorie">PLATS</h2>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-4">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Filet de boeuf aux herbes</h3>
@@ -94,7 +94,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-5">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Parmentier de queue de boeuf</h3>
@@ -108,7 +108,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-6">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Filet de turbot</h3>
@@ -127,7 +127,7 @@
             <section class="menu__desserts">
                 <h2 class="menu__title--categorie">DESSERTS</h2>
                 <div class="box-list">
-                    <div class="box">
+                    <div class="box delay-7">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Paris-Brest</h3>
@@ -141,7 +141,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-8">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Macaron au chocolat d'exception </h3>
@@ -155,7 +155,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
-                    <div class="box">
+                    <div class="box delay-9">
                         <div class="box__container">
                             <div class="box__content">
                                 <h3>Mousse au chocolat </h3>
