--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -24,7 +24,9 @@
         </div>
     </header>
     <main>
-        <img class="menu--img" src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="platImage">
+        <div class="menu--img">
+            <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="platImage">
+        </div>
         <div class="menu">
             <div class="menu__header">
                 <h2>La note enchantée</h2>
