--- a/a_la_française.html
+++ b/a_la_française.html
@@ -24,11 +24,15 @@
         </div>
     </header>
     <main>
-        <img class="menu--img" src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="platImage">
+        <div class="menu--img">
+            <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="platImage">
+        </div>
         <div class="menu">
             <div class="menu__header">
                 <h2>À la française</h2>
-                <i class="far fa-heart heart-unfill"></i>
+                <div class="menu__header__heart">
+                    <i class="far fa-heart heart-unfill"></i>
+                </div>
             </div>
             <section class="menu__starters">
                 <h3 class="menu__title--categorie">ENTRÉES</h3>
@@ -172,7 +176,7 @@
                 </div>
             </section>
             <div class="menu__btn">
-                <button class="btn"><a href="#">Commander</a></button>
+                <button class="btn order"><a href="#">Commander</a></button>
             </div>
         </div>
     </main>
