--- a/le_delice_du_sens.html
+++ b/le_delice_du_sens.html
@@ -24,11 +24,16 @@
         </div>
     </header>
     <main>
-        <img class="menu--img" src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="platImage">
+        <div class="menu--img">
+            <img class="menu--img" src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="platImage">
+        </div>
         <div class="menu">
             <div class="menu__header">
                 <h2>Le délice des sens</h2>
-                <i class="far fa-heart heart-unfill"></i>
+                <div class="menu__header__heart">
+                    <i class="far fa-heart heart-unfill"></i>
+                </div>
             </div>
             <section class="menu__starters">
                 <h3 class="menu__title--categorie">ENTRÉES</h3>
@@ -111,7 +116,7 @@
                     <div class="box delay-6">
                         <div class="box__container">
                             <div class="box__content">
-                                <h3>Côte de boeuf Angus  </h3>
+                                <h3>Côte de boeuf Angus </h3>
                                 <p>Et sa purée de panais</p>
                             </div>
                             <div class="price">
