--- a/index.html
+++ b/index.html
@@ -9,18 +9,32 @@
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-
+    <!-- Shrikhand -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="scss/main.css">
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <div class="logo">
             <img src="images/logo/ohmyfood.png" alt="logo">
         </div>
     </header>
+    <!-- loading -->
+    <div class="loader">
+        <div class="loader__inner">
+            <span></span>
+            <span></span>
+            <span></span>
+            <h2>Loading...</h2>
+        </div>
+    </div>
     <main>
+        <!--  -->
         <section id="reservation">
             <div class="reservation">
                 <div class="reservation__example">
@@ -34,31 +48,28 @@
                 </div>
             </div>
         </section>
+        <!-- steps -->
         <section id="steps">
             <div class="steps">
-                <h2>Fonctionement</h2>
+                <h2>Fonctionnement</h2>
                 <ol>
                     <li class="steps__item">
                         <i class="fas fa-mobile-alt"></i>
-                        <span>
-                            Choisissez un restaurant
-                        </span>
+                        <span>Choisissez un restaurant</span>
                     </li>
                     <li class="steps__item">
                         <i class="fas fa-list-ul"></i>
-                        <span>
-                            Composez votre menu
-                        </span>
+                        <span>Composez votre menu</span>
                     </li>
                     <li class="steps__item">
                         <i class="fas fa-store"></i>
-                        <span>
-                            Dégustez au restaurant
-                        </span>
+                        <span> Dégustez au restaurant</span>
                     </li>
                 </ol>
             </div>
         </section>
+
+        <!-- restaurants -->
         <section>
             <div class="restaurants">
                 <h2>Restaurants</h2>
@@ -69,7 +80,7 @@
                             <span class="card__new">Nouveau</span>
                         </div>
                         <div class="card__container">
-                            <div class="card__descrpition">
+                            <div class="card__description">
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
@@ -85,7 +96,7 @@
                             <span class="card__new">Nouveau</span>
                         </div>
                         <div class="card__container">
-                            <div class="card__descrpition">
+                            <div class="card__description">
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </div>
@@ -101,7 +112,7 @@
                             <span class="card__new">Nouveau</span>
                         </div>
                         <div class="card__container">
-                            <div class="card__descrpition">
+                            <div class="card__description">
                                 <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </div>
@@ -109,7 +120,7 @@
                                 <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
                                 <i class="far fa-heart heart-unfill"></i>
                             </span>
-                        </div>  
+                        </div>
                     </a>
                     <a class="card" href="le_delice_du_sens.html">
                         <div class="card__img">
@@ -117,7 +128,7 @@
                             <span class="card__new">Nouveau</span>
                         </div>
                         <div class="card__container">
-                            <div class="card__descrpition">
+                            <div class="card__description">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </div>
@@ -131,6 +142,7 @@
             </div>
         </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
         <div class="container">
             <h2 class="footer__title">ohmyfood</h2>
@@ -144,18 +156,17 @@
                 <li>
                     <a href="#">
                         <i class="fas fa-hands-helping"></i>
-                        Proposer un restaurant
+                        Devenir partenaire
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <p href="">Mention légale
-                    </a>
+                        Mention légale
                     </a>
                 </li>
                 <li>
                     <a href="mailto:contact@ohmyfood.com">
-                        <p href="">Contact</p>
+                        Contact
                     </a>
                 </li>
             </ul>
