--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -30,7 +30,9 @@
         <div class="menu">
             <div class="menu__header">
                 <h2>La note enchantée</h2>
-                <i class="far fa-heart heart-unfill"></i>
+                <div class="menu__header__heart">
+                    <i class="far fa-heart heart-unfill"></i>
+                </div>
             </div>
             <section class="menu__starters">
                 <h3 class="menu__title--categorie">ENTRÉES</h3>
