--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -24,11 +24,15 @@
         </div>
     </header>
     <main>
-        <img class="menu--img" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="platImage">
+        <div class="menu--img">
+            <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="platImage">
+        </div>
         <div class="menu">
             <div class="menu__header">
                 <h2>La palette du goût</h2>
-                <i class="far fa-heart heart-unfill"></i>
+                <div class="menu__header__heart">
+                    <i class="far fa-heart heart-unfill"></i>
+                </div>
             </div>
             <section class="menu__starters">
                 <h3 class="menu__title--categorie">ENTRÉES</h3>
