--- a/index.html
+++ b/index.html
@@ -160,14 +160,18 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Mention légale
-                    </a>
+                    <p class="footer__text">
+                        <a href="#">
+                            Mentions légales
+                        </a>
+                    </p>
                 </li>
                 <li>
-                    <a href="mailto:contact@ohmyfood.com">
-                        Contact
-                    </a>
+                    <p class="footer__text">
+                        <a href="mailto:contact@ohmyfood.com">
+                            Contact
+                        </a>
+                    </p>
                 </li>
             </ul>
         </div>
