--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -193,19 +193,23 @@
                 <li>
                     <a href="#">
                         <i class="fas fa-hands-helping"></i>
-                        Proposer un restaurant
+                        Devenir partenaire
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <p href="">Mention légale
-                    </a>
-                    </a>
+                    <p class="footer__text">
+                        <a href="#">
+                            Mentions légales
+                        </a>
+                    </p>
+
                 </li>
                 <li>
-                    <a href="mailto:contact@ohmyfood.com">
-                        <p href="">Contact</p>
-                    </a>
+                    <p class="footer__text">
+                        <a href="mailto:contact@ohmyfood.com">
+                            Contact
+                        </a>
+                    </p>
                 </li>
             </ul>
         </div>
