--- a/index.html
+++ b/index.html
@@ -35,17 +35,15 @@
     </div>
     <main>
         <!--  -->
+        <div class="location">
+            <i class="fas fa-map-marker-alt local__icon"></i>
+            <p> Paris, Belleville</p>
+        </div>
         <section id="reservation">
             <div class="reservation">
-                <div class="reservation__example">
-                    <i class="fas fa-map-marker-alt local__icon"></i>
-                    <p> Paris, Belleville</p>
-                </div>
-                <div class="reservation__description">
-                    <h2>Réserver le menu qui vous convient</h2>
-                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <button class="btn"><a href="#">Explorer nos restaurants</a></button>
-                </div>
+                <h2>Réserver le menu qui vous convient</h2>
+                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                <button class="btn"><a href="#">Explorer nos restaurants</a></button>
             </div>
         </section>
         <!-- steps -->
