--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!-- Shrikhand -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="scss/main.css">
 </head>
@@ -39,33 +40,36 @@
             <i class="fas fa-map-marker-alt local__icon"></i>
             <p> Paris, Belleville</p>
         </div>
-        <section id="reservation">
-            <div class="reservation">
-                <h2>Réserver le menu qui vous convient</h2>
-                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <button class="btn"><a href="#">Explorer nos restaurants</a></button>
-            </div>
-        </section>
-        <!-- steps -->
-        <section id="steps">
-            <div class="steps">
-                <h2>Fonctionnement</h2>
-                <ol>
-                    <li class="steps__item">
-                        <i class="fas fa-mobile-alt"></i>
-                        <span>Choisissez un restaurant</span>
-                    </li>
-                    <li class="steps__item">
-                        <i class="fas fa-list-ul"></i>
-                        <span>Composez votre menu</span>
-                    </li>
-                    <li class="steps__item">
-                        <i class="fas fa-store"></i>
-                        <span> Dégustez au restaurant</span>
-                    </li>
-                </ol>
-            </div>
-        </section>
+        <div class="row">
+            <!-- reservation -->
+            <section id="reservation">
+                <div class="reservation">
+                    <h2>Réserver le menu qui vous convient</h2>
+                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    <button class="btn"><a href="#">Explorer nos restaurants</a></button>
+                </div>
+            </section>
+            <!-- steps -->
+            <section id="steps">
+                <div class="steps">
+                    <h2>Fonctionnement</h2>
+                    <ol>
+                        <li class="steps__item">
+                            <i class="fas fa-mobile-alt"></i>
+                            <span>Choisissez un restaurant</span>
+                        </li>
+                        <li class="steps__item">
+                            <i class="fas fa-list-ul"></i>
+                            <span>Composez votre menu</span>
+                        </li>
+                        <li class="steps__item">
+                            <i class="fas fa-store"></i>
+                            <span> Dégustez au restaurant</span>
+                        </li>
+                    </ol>
+                </div>
+            </section>
+        </div>
 
         <!-- restaurants -->
         <section>
