--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -9,7 +9,10 @@
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-
+    <!-- Shrikhand -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="scss/main.css">
 </head>
@@ -194,6 +197,7 @@
             </div>
         </div>
     </main>
+    <!-- footer -->
     <footer class="footer">
         <div class="container">
             <h2 class="footer__title">ohmyfood</h2>
