--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
-                            <span class="card__favorite">
-                                <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
+                            <div class="heart">
                                 <i class="far fa-heart heart-unfill"></i>
-                            </span>
+                                <i class="fas fa-heart heart-fill"></i>
+                            </div>
                         </div>
                     </a>
                     <a class="card" href="la_note_enchantee.html">
@@ -102,10 +102,10 @@
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </div>
-                            <span class="card__favorite">
-                                <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
+                            <div class="heart">
                                 <i class="far fa-heart heart-unfill"></i>
-                            </span>
+                                <i class="fas fa-heart heart-fill"></i>
+                            </div>
                         </div>
                     </a>
                     <a class="card" href="a_la_française.html">
@@ -118,10 +118,10 @@
                                 <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </div>
-                            <span class="card__favorite">
-                                <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
+                            <div class="heart">
                                 <i class="far fa-heart heart-unfill"></i>
-                            </span>
+                                <i class="fas fa-heart heart-fill"></i>
+                            </div>
                         </div>
                     </a>
                     <a class="card" href="le_delice_du_sens.html">
@@ -134,10 +134,10 @@
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </div>
-                            <span class="card__favorite">
-                                <!-- <i class="fas fa-heart fa-stack-2x heart-fill"></i> -->
+                            <div class="heart">
                                 <i class="far fa-heart heart-unfill"></i>
-                            </span>
+                                <i class="fas fa-heart heart-fill"></i>
+                            </div>
                         </div>
                     </a>
                 </div>
