--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -33,8 +33,9 @@
         <div class="menu">
             <div class="menu__header">
                 <h2>La palette du goût</h2>
-                <div class="menu__header__heart">
+                <div class="heart">
                     <i class="far fa-heart heart-unfill"></i>
+                    <i class="fas fa-heart heart-fill"></i>
                 </div>
             </div>
             <section class="menu__starters">
