--- a/le_delice_du_sens.html
+++ b/le_delice_du_sens.html
@@ -34,8 +34,9 @@
         <div class="menu">
             <div class="menu__header">
                 <h2>Le délice des sens</h2>
-                <div class="menu__header__heart">
+                <div class="heart">
                     <i class="far fa-heart heart-unfill"></i>
+                    <i class="fas fa-heart heart-fill"></i>
                 </div>
             </div>
             <section class="menu__starters">
