--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
             <ul class="footer__nav">
                 <li>
                     <a href="#">
-                        <i class="fas fa-utensils"></i>
+                        <i class="fas fa-xs fa-utensils"></i>
                         Proposer un restaurant
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fas fa-hands-helping"></i>
+                        <i class="fas fa-xs fa-hands-helping"></i>
                         Devenir partenaire
                     </a>
                 </li>
