--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- header -->
     <header>
         <div class="logo">
-            <img src="images/logo/ohmyfood.png" alt="logo">
+            <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo"></a>
         </div>
     </header>
     <!-- loading -->
@@ -76,70 +76,76 @@
             <div class="restaurants">
                 <h2>Restaurants</h2>
                 <div class="cards">
-                    <a class="card" href="la_palette_du_gout.html">
-                        <div class="card__img">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-                            <span class="card__new">Nouveau</span>
-                        </div>
-                        <div class="card__container">
-                            <div class="card__description">
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
+                    <div class="card">
+                        <a href="la_palette_du_gout.html">
+                            <div class="card__img">
+                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                                <span class="card__new">Nouveau</span>
                             </div>
-                            <div class="heart">
-                                <i class="far fa-heart heart-unfill"></i>
-                                <i class="fas fa-heart heart-fill"></i>
+                            <div class="card__container">
+                                <div class="card__description">
+                                    <h3>La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="far fa-heart heart-unfill"></i>
+                                    <i class="fas fa-heart heart-fill"></i>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a class="card" href="la_note_enchantee.html">
-                        <div class="card__img">
-                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-                            <span class="card__new">Nouveau</span>
-                        </div>
-                        <div class="card__container">
-                            <div class="card__description">
-                                <h3>La note enchantée</h3>
-                                <p>Charonne</p>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="la_note_enchantee.html">
+                            <div class="card__img">
+                                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                                <span class="card__new">Nouveau</span>
                             </div>
-                            <div class="heart">
-                                <i class="far fa-heart heart-unfill"></i>
-                                <i class="fas fa-heart heart-fill"></i>
+                            <div class="card__container">
+                                <div class="card__description">
+                                    <h3>La note enchantée</h3>
+                                    <p>Charonne</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="far fa-heart heart-unfill"></i>
+                                    <i class="fas fa-heart heart-fill"></i>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a class="card" href="a_la_française.html">
-                        <div class="card__img">
-                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-                            <span class="card__new">Nouveau</span>
-                        </div>
-                        <div class="card__container">
-                            <div class="card__description">
-                                <h3>À la française</h3>
-                                <p>Cité Rouge</p>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="a_la_française.html">
+                            <div class="card__img">
+                                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                             </div>
-                            <div class="heart">
-                                <i class="far fa-heart heart-unfill"></i>
-                                <i class="fas fa-heart heart-fill"></i>
+                            <div class="card__container">
+                                <div class="card__description">
+                                    <h3>À la française</h3>
+                                    <p>Cité Rouge</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="far fa-heart heart-unfill"></i>
+                                    <i class="fas fa-heart heart-fill"></i>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a class="card" href="le_delice_du_sens.html">
-                        <div class="card__img">
-                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-                            <span class="card__new">Nouveau</span>
-                        </div>
-                        <div class="card__container">
-                            <div class="card__description">
-                                <h3>Le délice des sens</h3>
-                                <p>Folie-Méricourt</p>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="le_delice_du_sens.html">
+                            <div class="card__img">
+                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                             </div>
-                            <div class="heart">
-                                <i class="far fa-heart heart-unfill"></i>
-                                <i class="fas fa-heart heart-fill"></i>
+                            <div class="card__container">
+                                <div class="card__description">
+                                    <h3>Le délice des sens</h3>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="far fa-heart heart-unfill"></i>
+                                    <i class="fas fa-heart heart-fill"></i>
+                                </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
