--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -23,12 +23,12 @@
             <i class="fas fa-arrow-left"></i>
         </a>
         <div class="logo">
-            <img src="images/logo/ohmyfood.png" alt="logo">
+            <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo"></a>
         </div>
     </header>
     <main>
         <div class="menu--img">
-            <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="platImage">
+            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="platImage">
         </div>
         <div class="menu">
             <div class="menu__header">
