--- a/le_delice_du_sens.html
+++ b/le_delice_du_sens.html
@@ -23,12 +23,12 @@
             <i class="fas fa-arrow-left"></i>
         </a>
         <div class="logo">
-            <img src="images/logo/ohmyfood.png" alt="logo">
+            <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo"></a>
         </div>
     </header>
     <main>
         <div class="menu--img">
-            <img class="menu--img" src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            <img class="menu--img" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="platImage">
         </div>
         <div class="menu">
