--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
